tests/NormalTests/paczka1/small_fuzzy/72516314.err
Error in line 2: ZVS7WiK0 A998 81,1
Error in line 4: ZVS7WiK0 A557 51,8
